Resolve the security review findings on the stateless-deployment refactor
Addresses the 25 in-scope findings of the final security review (9 CRITICAL,
22 MAJOR, 8 MINOR reported; the remainder are excluded by the agreed plan and
are listed at the end).

Container entry point and packaging (C7, C8, C9, M7, M8, M14, M15, M17, M19,
N1, N8)
- build.gradle: restore an always-run verifySigningKeyAnchorsAreBlank gate on
  processResources, jar, distTar, distZip and installDist, checking both the
  tracked and the processed security.properties and never echoing a value.
- docker-entrypoint.sh: refuse every credential this repository has published.
  The retired signing keys and the four postgres-demo passwords are held as
  SHA-256 digests, so the entry point recognises them without carrying any of
  them into the image; the check is fail-closed and runs before the length and
  entropy floors, in every profile.
- Validate OFBIZ_CONTENT_URL_PREFIX as an absolute http(s) origin, reject
  secret-bearing query parameters in OFBIZ_JMS_PROVIDER_URL, and refuse
  secret-bearing -D properties in JAVA_OPTS, OFBIZ_OPTS and argv before exec.
- AJP now requires OFBIZ_AJP_BIND_ADDRESS and refuses wildcards instead of
  binding every interface; OFBIZ_SSL_ACCELERATOR_PORT requires either a private
  connector bind or an explicit trusted-network acknowledgement.
- Re-validate the security invariants after every start-up hook returns.
- .dockerignore excludes .env files and docker/examples from the build context.
- send_ofbiz_stop_signal.sh reads the runtime override, never prints the key and
  quotes every expansion.

Load-balancer surface (C1, M2, M3, M4, N2)
- Map HealthCheckServlet at /health/* so it owns every spelling the allow-list
  admits, answers only the two exact probe paths, 404s a near miss and discards
  any session minted for it.
- Restore the exact probe bypass in CrossSubdomainSessionValve through
  HealthCheckServlet.isProbePath, and stop logging Set-Cookie values.
- Corr